# fins_inspect_classifier

./: .gitignore  CMakeLists.txt  README.md  config.h  nodes.cpp  package.yaml  yolo_nodes.hpp
dataset/analog_gauge/: README.dataset.txt  README.roboflow.txt  data.yaml
dataset/analog_gauge/test/labels/: 000023_jpg.rf.4761b320eaa134026ef38b00420687c5.txt  000023_jpg.rf.6243592764387ccf30bb78ea8955d5ad.txt  000042_jpg.rf.554543b2dbe82d94e8e29f6cfe669a3d.txt  000090_png_jpg.rf.12f49b155818a2722ed3d74312b13f44.txt  000090_png_jpg.rf.2d451965e6e16fef44847c70403653d5.txt  00017-jpg-5dhbkd8h-ingestion-585c5dcfbb-ltlqg_jpg.rf.5f021a4be6f7dd9911ce808a6416c453.txt  00017-jpg-5dhbkdfc-ingestion-585c5dcfbb-qz9dm_jpg.rf.c6701c000355598eed73a7883e3fa64b.txt  00021_jpg.rf.e75a54bacb14237623f7a041d00dacd6.txt  0004282_water-pressure-gauge-0-100-psi_600_jpeg_jpg.rf.e2ef178675859900577c9fdf3b0f77ba.txt  00143_jpg.rf.d2a25159409b35951671691dffa7554b.txt  00213_jpg.rf.220d6a1c09aa1d4000656b4ad36dca49.txt  00213_jpg.rf.405f3beae55a8de3f5d3e9ab74c22d9b.txt  00213_jpg.rf.737b974eb297144bd13cb8e8c6642ed7.txt  00630238_jpg.rf.ab9dcbe47dd1b814d6580c1da9bf34d8.txt  (+842 more)
dataset/digital_display/: README.dataset.txt  README.roboflow.txt  data.yaml
dataset/light_button/: data.yaml
dataset/merged/: data.yaml
dataset/merged/valid/: labels.cache
dataset/rgb_led_panel/: README.dataset.txt  README.roboflow.txt  data.yaml
runs/detect/train/: args.yaml
runs/detect/train-2/: args.yaml  results.csv
runs/detect/train-3/: args.yaml
runs/detect/train-4/: args.yaml  results.csv
(+25917 files in other folders)
